# Vulkan-Test

./: .gitignore  CMakeLists.txt  CMakePresets.json  app.cpp  app.h  compile_shaders.bat  lve_pipeline.cpp  lve_pipeline.h  lve_window.cpp  lve_window.h  main.cpp  vcpkg.json
shaders/: simple_shader.frag  simple_shader.vert
